# qbc8-basketball-reference

./: .gitignore  README.md  flake.nix  pyproject.toml
src/: Basketball_hypo_2.ipynb  basketball_hypo_1.ipynb  basketball_reference.sql  crawler.ipynb
src/data/db_csv/: mvp_nominees.csv
src/sql/: query.sql
