[project]
name = "qbc8-basketball-reference"
version = "0.1.0"
description = "Data Scraping and Analysis project for Quera Data Analysis Bootcamp (qbc8) by Group4"
authors = [
    {name = "L0L1P0P1",email = "behradbadeli@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.12.3,<5.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
